# bitnet-triton

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark.py  benchmark_lut.py  benchmark_v2.py
bitnet_triton/: __init__.py  kernels.py  kernels_lut.py  kernels_v2.py  ops.py  packing.py
examples/: fastest_model.py  int8_benchmark.py  mnist_speed_comparison.py  native_int8_benchmark.py  practical_benchmark.py  realistic_benchmark.py  simple_benchmark.py  tensorrt_benchmark.py
