[project]
name = "bitnet-triton"
version = "0.1.0"
description = "High-performance Triton kernels for BitNet (1.58-bit) neural networks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["bitnet", "triton", "quantization", "neural-network", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "triton>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "torchvision>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bitnet_triton"]
