[project]
name = "bitnet-triton"
version = "0.1.0"
description = "High-performance Triton kernels for BitNet (1.58-bit) neural networks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["bitnet", "triton", "quantization", "neural-network", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "triton>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "torchvision>=0.15.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bitnet_triton"]

# Ruff
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "B905", "E731", "B023"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["F821"]  # False positives with lambda capturing local variables
"benchmarks/*" = ["F841", "B007"]  # Benchmark files often have unused variables

[tool.ruff.lint.isort]
known-first-party = ["bitnet_triton"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Mypy
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = false

# PyTorch type stub issues (Module/Tensor union types)
[[tool.mypy.overrides]]
module = ["bitnet_triton.ops"]
ignore_errors = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
